# ai-code-explainer

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  streamlit_app.py
src/backend/: __init__.py  api.py  config.py  services.py
src/frontend/: __init__.py  components.py
